--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.0.0"
   }
